--- a/schedule-styles.css
+++ b/schedule-styles.css
@@ -16,16 +16,19 @@ body {
     margin-left:auto;
     width:70%;
     margin-right:auto;
+    display:block;
+    overflow:hidden;
 }
 
 
 .column {
     width:40%;
+    padding-top:20px;
 }
 
 .expand-toggle {
     border: 1px solid #444444;
-    margin-top:10px;
+    margin-top:20px;
     padding-left:20px;
     border-radius:10px 10px 0px 0px;
 }
@@ -38,12 +41,15 @@ body {
     margin-bottom:5px;
 }
 
-
+.round-bottom {
+    border-radius:10px 10px 10px 10px;
+}
 
 .expand-content {
     border: 1px solid #444444;
     border-top:0px;
-    margin-top:0px;
+    margin-top:-40px;
+    padding-top:40px;
     display:none;
     border-radius:0px 0px 10px 10px;
 }
