Added support for small screens

--- a/schedule-styles.css
+++ b/schedule-styles.css
@@ -80,3 +80,21 @@ body {
 .right {
     float:right;
 }
+
+@media(max-width:720px) {
+    .left {
+        float:none;
+    }
+
+    .right {
+        float:none;
+    }
+
+    .column {
+        margin-right:auto;
+        margin-left:auto;
+        width:70%;
+    }
+
+}
+
