Nighttime Color Change
Playing around with changing color of nighttime activities block on schedule to make it distinct from daytime activities.

--- a/schedule-styles.css
+++ b/schedule-styles.css
@@ -136,6 +136,10 @@ p, ul, ol, table { margin-top: 1em; }
     padding-bottom:20px;
 }
 
+.nighttime {
+    color: #fff;
+    background-color: #115166;
+}
 
 /*Controll the arrows*/
 .arrow {
