--- a/slideshow-style.css
+++ b/slideshow-style.css
@@ -2,9 +2,7 @@
 
 
 .slide-container {
-    width:720px;
-    height:600px;
+    width:70%;
     margin-left:auto;
     margin-right:auto;
-    border: 1px solid black;
 }
