--- a/styles_subpage.css
+++ b/styles_subpage.css
@@ -1,5 +1,5 @@
-/*Style sheet for UCLA Planetarium page*/
-/*By Abhimat Gautam.*/
+/*Style sheet for EYU subpages*/
+/*By Abhimat Gautam*/
 
 
 /*Reset*/
