--- a/schedule-styles.css
+++ b/schedule-styles.css
@@ -116,3 +116,9 @@
     margin-left:auto;
     margin-right:auto;
 }
+
+
+/*Adjusting margin for lists in the schedule*/
+.block ul.schedule-list {
+	margin-left: 0em;
+}
